syntax = "proto3";

package user.v1;
option go_package = "/user/v1;userv1";

import "google/protobuf/timestamp.proto"; // 使用timestamp类型

message User {
  int64 id = 1;
  string email = 2;
  string nick_name = 3;
  string phone = 4;
  string password = 5;
  WechatInfo wechat_info = 6;
  string about_me = 7;
  google.protobuf.Timestamp ctime = 8;
  google.protobuf.Timestamp birthday = 9;
}

service UserService {
  rpc Signup(SignUpRequest) returns (SignUpResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Profile(ProfileRequest) returns (ProfileResponse);
  rpc EditNoSensitive(EditNoSensitiveRequest) returns (EditNoSensitiveResponse);
  rpc FindOrCreate(FindOrCreateRequest) returns (FindOrCreateResponse);
  rpc FindOrCreateByWechat(FindOrCreateByWechatRequest) returns (FindOrCreateByWechatResponse);
}

message WechatInfo {
  string open_id = 1;
  string union_id = 2;
}

message SignUpRequest {
  User user = 1;
}

message SignUpResponse {

}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message ProfileRequest {
  int64 id = 1;
}

message ProfileResponse {
  User user = 1;
}

message EditNoSensitiveRequest {
  User user = 1;
}

message EditNoSensitiveResponse {

}

message FindOrCreateRequest {
  string phone = 1;
}

message FindOrCreateResponse {
  User user = 1;
}

message FindOrCreateByWechatRequest {
  WechatInfo info = 1;
}

message FindOrCreateByWechatResponse {
  User user = 1;
}